--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="//apps.8thwall.com/xrweb?appKey=eUhLBfVrrbMpFgvoJrcT940KkDlrtr2Du8YowFWXDJdNBE1pNn9ia69se5BPaQ87GhWWZh">
     </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-    <script src="./js/pinch-scale.js"></script>
+    <!--<script src="./js/pinch-scale.js"></script>-->
     <script src="./js/gesture-detector.js"></script>
     <script src="./js/two-finger-spin.js"></script>
     <script src="./js/camera.js"></script>
@@ -19,7 +19,7 @@
 </head>
 <body>
     <a-scene xrweb tap-place gesture-detector pinch-scale two-finger-spin  xrextras-almost-there xrextras-loading xrextras-runtime-error>
-        <a-asset-item id="model" src="./assets/model.gltf" gltf-model="#model" class="cantap"   two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-asset-item>
+        <a-asset-item id="model" src="./assets/model.gltf" ></a-asset-item>
         <a-camera position="0 8 0" id="aCamera" raycaster="objects: .cantap" cursor=" fuse: false;rayOrigin: mouse;" light="intensity:1" id="aCamera">
         </a-camera>
         <a-entity light="type:hemisphere;" position="1 1 0.0001" id="ar-light">
