--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <script src="//apps.8thwall.com/xrweb?appKey=eUhLBfVrrbMpFgvoJrcT940KkDlrtr2Du8YowFWXDJdNBE1pNn9ia69se5BPaQ87GhWWZh">
     </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-    <!--<script src="./js/pinch-scale.js"></script>-->
+    <script src="./js/pinch-scale.js"></script>
     <script src="./js/gesture-detector.js"></script>
     <script src="./js/two-finger-spin.js"></script>
-    <script src="./js/camera.js"></script>
+   <!-- <script src="./js/camera.js"></script>-->
 
 </head>
 <body>
