--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/pinch-scale.js"></script>
     <script src="./js/gesture-detector.js"></script>
     <script src="./js/two-finger-spin.js"></script>
-   <!-- <script src="./js/camera.js"></script>-->
+    <script src="./js/camera.js"></script>
 
 </head>
 <body>
