--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="//apps.8thwall.com/xrweb?appKey=eUhLBfVrrbMpFgvoJrcT940KkDlrtr2Du8YowFWXDJdNBE1pNn9ia69se5BPaQ87GhWWZh">
     </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
     <script src="./js/pinch-scale.js"></script>
     <script src="./js/gesture-detector.js"></script>
     <script src="./js/two-finger-spin.js"></script>
@@ -26,9 +27,9 @@
 
         <a-entity light="type:hemisphere;" position="1 1 0.0001" id="ar-light">
         </a-entity>
-        
-        <a-entity  gltf-model="#model" class="cantap"   two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-entity>
-        <!--Adding the cantap class allows the ground to be clicked -->
+
+        <!--<a-entity  gltf-model="#model" class="cantap"   two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-entity>
+        Adding the cantap class allows the ground to be clicked -->
         <a-entity id="ground" class="cantap" geometry="primitive: box" material="color: #ffffff; transparent: true; opacity: 0.0" scale="1000 2 1000" position="0 -1 0">
         </a-entity>
     </a-scene>
