--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a-entity light="type:hemisphere;" position="1 1 0.0001" id="ar-light">
         </a-entity>
 
-        <!--<a-entity  gltf-model="#model" class="cantap"   two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-entity>
-        Adding the cantap class allows the ground to be clicked -->
+        <a-entity  gltf-model="#model" class="cantap"   animation-mixer two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-entity>
+        <!--Adding the cantap class allows the ground to be clicked -->
         <a-entity id="ground" class="cantap" geometry="primitive: box" material="color: #ffffff; transparent: true; opacity: 0.0" scale="1000 2 1000" position="0 -1 0">
         </a-entity>
     </a-scene>
