--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
-    <!--<script src="./js/pinch-scale.js"></script>-->
     <script src="./js/gesture-detector.js"></script>
-    <script src="./js/two-finger-spin.js"></script>
+    <!--<script src="./js/pinch-scale.js"></script>
+    <script src="./js/two-finger-spin.js"></script>-->
     <script src="./js/camera.js"></script>
 
 </head>
