--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <script src="//apps.8thwall.com/xrweb?appKey=eUhLBfVrrbMpFgvoJrcT940KkDlrtr2Du8YowFWXDJdNBE1pNn9ia69se5BPaQ87GhWWZh">
     </script>
+    <script src="https://unpkg.com/aframe-render-order-component@1.0.0/dist/aframe-render-order-component.min.js">
+    </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
     <script src="./js/gesture-detector.js"></script>
