--- a/index.html
+++ b/index.html
@@ -14,24 +14,21 @@
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
     <script src="./js/gesture-detector.js"></script>
-    <!--<script src="./js/pinch-scale.js"></script>
-    <script src="./js/two-finger-spin.js"></script>-->
     <script src="./js/camera.js"></script>
 
 </head>
 <body>
     <a-scene xrweb tap-place gesture-detector pinch-scale two-finger-spin xrextras-almost-there xrextras-loading xrextras-runtime-error>     
          <a-asset-item id="model" src="./assets/model.gltf" ></a-asset-item>
-        <a-camera position="0 8 0" id="aCamera" raycaster="objects: .cantap" cursor=" fuse: false;rayOrigin: mouse;" light="intensity:1" id="aCamera">
-        </a-camera>
-
+         <a-camera position="0 8 0" raycaster="objects: .cantap" cursor="
+         fuse: false;
+         rayOrigin: mouse;" light="intensity:1" id="aCamera">
+         </a-camera>
         <a-entity light="type:hemisphere;" position="1 1 0.0001" id="ar-light">
         </a-entity>
-
-        <!--<a-entity  gltf-model="#model" class="cantap" animation-mixer two-finger-spin pinch-scale scale="0.3 0.3 0.3" ></a-entity>
-        Adding the cantap class allows the ground to be clicked -->
-        <a-entity id="ground" class="cantap" geometry="primitive: box" material="color: #ffffff; transparent: true; opacity: 0.0" scale="1000 2 1000" position="0 -1 0">
-        </a-entity>
+        <a-entity id="ground" class="cantap" geometry="primitive: box"
+        material="color: #ffffff; transparent: true; opacity: 0.0" scale="1000 2 1000" position="0 -1 0">
+    </a-entity>
     </a-scene>
 </body>
 </html>
