--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/aframe-render-order-component@1.0.0/dist/aframe-render-order-component.min.js">
     </script>
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>-->
     <script src="./js/gesture-detector.js"></script>
     <script src="./js/camera.js"></script>
 
