--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <a-scene xrweb log tap-place gesture-detector pinch-scale two-finger-spin xrextras-almost-there xrextras-loading xrextras-runtime-error>     
+    <a-scene xrweb tap-place gesture-detector pinch-scale two-finger-spin xrextras-almost-there xrextras-loading xrextras-runtime-error>     
          <a-asset-item id="model" src="./assets/model.gltf" ></a-asset-item>
          <a-camera position="0 8 0" raycaster="objects: .cantap" cursor="
          fuse: false;
